<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:rotation="67"
                android:translationY="-170dp"
                android:translationX="10dp"
                android:layout_alignParentLeft="true"
                android:layout_width="200dp"
                android:layout_height="400dp"
                android:src="@drawable/green_rect"/>

            <ImageView
                android:rotation="69"
                android:translationY="230dp"
                android:translationX="170dp"
                android:layout_alignParentBottom="true"
                android:layout_width="230dp"
                android:layout_height="460dp"
                android:src="@drawable/green_rect"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.registration.RegistrationFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/auth_top"
                android:paddingStart="@dimen/auth_horizontal"
                android:paddingEnd="@dimen/auth_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/h"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:paddingBottom="@dimen/auth_heading_bottom"
                    style="@style/Theme.Heading1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/auth_edittexts_bottom"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        style="@style/Theme.EditTextLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enter_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                        p
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/login"
                        style="@style/Theme.EditTextLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enter_login"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/password"
                        style="@style/Theme.EditTextLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enter_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/repeat_password"
                        style="@style/Theme.EditTextLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enter_repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_text_layout_height"
                    android:layout_gravity="center"
                    android:text="@string/next"
                    style="@style/Theme.Auth.Button" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>