<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.recover.RecoverPasswordFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.techstroy.projectg.ui.recover.RecoverPasswordViewModel" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:rotation="127"
                android:translationY="-190dp"
                android:translationX="0dp"
                android:layout_alignParentLeft="true"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/green_rect"/>

            <ImageView
                android:rotation="127"
                android:translationY="230dp"
                android:translationX="170dp"
                android:layout_alignParentBottom="true"
                android:layout_width="330dp"
                android:layout_height="360dp"
                android:src="@drawable/green_rect"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/Theme.Auth.Container">

            <TextView
                style="@style/Theme.Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/auth_heading_bottom"
                android:text="@string/recover_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/auth_edittexts_bottom">

                <com.google.android.material.textfield.TextInputLayout
                    android:visibility="@{ viewModel.isMailSent ? View.VISIBLE : View.GONE }"
                    tools:visibility="gone"
                    style="@style/Theme.EditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_login"
                    app:helperTextEnabled="true"
                    app:helperText="@string/recover_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recover_enter_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:helperTextEnabled="true"
                        app:helperText="@string/recover_text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.jkb.vcedittext.VerificationCodeEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32sp"
                    android:layout_marginBottom="28dp"
                    tools:text="1234"
                    style="@style/Theme.Auth.VerificationCode"/>

            </LinearLayout>

            <Button
                android:id="@+id/next"
                style="@style/Theme.Auth.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_layout_height"
                android:layout_gravity="center"

                android:text="@string/next" />

        </LinearLayout>

    </FrameLayout>

</layout>