<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".FeedFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mint">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_layout_height"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="YarMolenko13"
                            android:layout_gravity="bottom"
                            android:textColor="@color/white"
                            android:textSize="26sp"
                            android:layout_marginLeft="@dimen/collapsing_tollbar_horizontal_indent"
                            android:layout_marginBottom="@dimen/feed_chip_vertical_indent"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/match_chips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="@dimen/feed_chip_vertical_indent"
                            android:orientation="horizontal"
                            app:spanCount="1"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/match_chip_item_layout"/>

                    </LinearLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_body"
                android:elevation="@dimen/feed_body_elevation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/feed_body_bg"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/main_horizontal_indent"
                        android:layout_marginRight="@dimen/main_horizontal_indent"
                        android:layout_marginTop="@dimen/main_horizontal_indent"
                        android:layout_marginBottom="0dp"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:alignItems="center">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/grenades_tile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Theme.Tile">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/bg_grenades_tile"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tile_grenades"
                                    style="@style/Theme.Tile.Heading"/>


                            </FrameLayout>

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/tactics_tile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Theme.Tile">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/bg_tactics_tile"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tile_tactics"
                                    style="@style/Theme.Tile.Heading"/>

                            </FrameLayout>

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/commands_tile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Theme.Tile">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/bg_commands_tile"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tile_commands"
                                    style="@style/Theme.Tile.Heading"/>

                            </FrameLayout>

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/trainings_tile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Theme.Tile">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/bg_trainings_tile"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tile_trainings"
                                    style="@style/Theme.Tile.Heading"/>

                            </FrameLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </com.google.android.flexbox.FlexboxLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</layout>